[gd_scene load_steps=4 format=3 uid="uid://gameroot001"]

[ext_resource type="Script" path="res://scenes/Game/GameRoot.gd" id="1_gameroot"]
[ext_resource type="Script" path="res://scripts/core/TurnManager.gd" id="2_turnmanager"]
[ext_resource type="Script" path="res://scenes/Game/HUD.gd" id="3_hud"]

[node name="GameRoot" type="Node"]
script = ExtResource("1_gameroot")

[node name="BoardView" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="BoardView"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.3, 0.35, 1)

[node name="BoardPlaceholder" type="Label" parent="BoardView"]
offset_left = 540.0
offset_top = 340.0
offset_right = 740.0
offset_bottom = 380.0
text = "[ Hex Board Goes Here ]"
horizontal_alignment = 1

[node name="UIRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_hud")

[node name="TopBar" type="HBoxContainer" parent="UIRoot"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="UIRoot/TopBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "< Back"

[node name="PhaseLabel" type="Label" parent="UIRoot/TopBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Phase: SETUP"

[node name="RoundLabel" type="Label" parent="UIRoot/TopBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Round: 0"

[node name="PlayerLabel" type="Label" parent="UIRoot/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Waiting..."
horizontal_alignment = 2

[node name="BottomBar" type="HBoxContainer" parent="UIRoot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 20

[node name="ReadyButton" type="Button" parent="UIRoot/BottomBar"]
visible = false
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Ready"

[node name="EndTurnButton" type="Button" parent="UIRoot/BottomBar"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "End Turn"

[node name="DebugLabel" type="Label" parent="UIRoot"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
text = "DEBUG MODE - Press ESC to return to menu"
horizontal_alignment = 1

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("2_turnmanager")
